--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student learning how to code</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Long Grove, Il.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy tennis, going to the gym and gaming.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm not sure what i'd like to do with the rest of my life but programming seems really interesting</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Denver, CO.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It seems extremely interesting</p>
     </section>
 
     <footer id="footer">
